classDiagram
    class Environment {
        +Long id
        +String name
        +String cluster
    }
    class Application {
        +Long id
        +String name
        +String status
    }
    class ManagedNode {
        +Long id
        +String hostname
        +String ip
    }
    class User {
        +Long id
        +String username
        +String role
    }
    class Alert {
        +Long id
        +String name
        +String status
    }
    
    Environment "1" *-- "*" Application
    Environment "1" *-- "*" ManagedNode
    User "*" -- "*" Environment : has access
